# regex_match

./: README.md  pyproject.toml
test/: test_validator.py
validator/: main.py
